
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fork_shell () ;
 int is_root () ;
 int printf (char*) ;

void check_root() {
 printf("[.] checking if we got root\n");

 if (!is_root()) {
  printf("[-] something went wrong =(\n");
  return;
 }

 printf("[+] got r00t ^_^\n");



 fork_shell();
}
