; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41994.c_check_root.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41994.c_check_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"[.] checking if we got root\0A\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"[-] something went wrong =(\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"[+] got r00t ^_^\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_root() #0 {
  %1 = call i32 @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 (...) @is_root()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  br label %9

6:                                                ; preds = %0
  %7 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 (...) @fork_shell()
  br label %9

9:                                                ; preds = %6, %4
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @is_root(...) #1

declare dso_local i32 @fork_shell(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
